<resources>
    <string name="app_name">ICash</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="registerBtn">Register</string>
    <string name="loginBtn">Login</string>
    <string name="securityQuestion">Answer in the box</string>
    <string name="registrationTitle">Registration Form</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="generateQuiz">Generate Question</string>
    <string name="questionToBeGenerated">Security Question</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="new_password">New Password</string>
</resources>