<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".ForgotPasswordActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center"
            android:background="@drawable/margin_rectangle">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/icash"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="Security Question will be asked to recover your password"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="#000">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/username"
                    android:id="@+id/usernameFP"
                    android:ems="10"
                    android:gravity="center"
                    android:padding="20dp"
                    android:background="@drawable/text_box_rounded"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/questionToBeGenerated"
                    android:id="@+id/question_generated"
                    android:padding="15dp"
                    android:background="@drawable/text_box_rounded"
                    android:textColor="#7A0909"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="#000">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center"
                    android:hint="@string/securityQuestion"
                    android:id="@+id/security_question"
                    android:ems="10"
                    android:padding="20dp"
                    android:background="@drawable/text_box_rounded"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                android:background="@drawable/button_rounded"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/generateQuiz"
                android:layout_marginTop="20dp"
                android:id="@+id/generate_securityQuiz"
                android:backgroundTint="#A3000000"
                android:textColor="#ffffff"
                />
            <Button
                android:background="@drawable/button_rounded"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/submit"
                android:layout_marginTop="20dp"
                android:id="@+id/submit"
                android:textColor="#ffffff"

                android:visibility="gone"
                />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
