<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".SecurityQuestionsActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:gravity="center"
            android:background="@drawable/margin_rectangle">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/icash"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="Security Question will be asked to recover your password"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:prompt="@string/app_name"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner"
                android:spinnerMode="dropdown"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColorHint="#000">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/securityQuestion"
                    android:id="@+id/security_question_answer"
                    android:ems="10"
                    android:gravity="center"

                    android:background="@drawable/text_box_rounded"
                    android:layout_marginTop="20dp"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:background="@drawable/button_rounded"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/submit"
                android:layout_marginTop="20dp"
                android:id="@+id/submit"
                android:textColor="#ffffff"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
